--- a/views/partials/loginform.ejs
+++ b/views/partials/loginform.ejs
@@ -9,5 +9,6 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
         </div>
+        <%-include('messagefield.ejs') %>
         <button type="submit">Login</button>
 </section>
